--- a/FE/src/components/ui/Card.css
+++ b/FE/src/components/ui/Card.css
@@ -171,7 +171,9 @@
 
 .blog-card-image {
   width: 100%;
-  height: 240px;
+  height: 280px;
+  min-height: 280px;
+  max-height: 280px;
   object-fit: cover;
 }
 
