--- a/FE/src/styles/theme-media.css
+++ b/FE/src/styles/theme-media.css
@@ -59,6 +59,10 @@
 
 /* iPad(portrait) | Galaxy Tab 4(portrait)  */
 @media only screen and (max-width: 991px) {
+	#blogs .blogs-container {
+		padding: 40px 0 50px !important;
+	}
+
 	.page-template-search .cl-qs-field.checkboxes label {
 		width: 100%;		
 	}
