--- a/FE/src/styles/theme.css
+++ b/FE/src/styles/theme.css
@@ -858,6 +858,7 @@ header.header {
 }
 
 .fp-item-price h3 {
+    font-family: var(--font-family-default);
     font-size: 36px;
     text-transform: uppercase;
     color: #ffffff;
@@ -870,6 +871,7 @@ header.header {
 }
 
 .fp-item-address h4 {
+    font-family: var(--font-family-default);
     font-size: 24px;
     text-transform: uppercase;
     color: #ffffff;
@@ -878,6 +880,7 @@ header.header {
 }
 
 .fp-item-address h5 {
+    font-family: var(--font-family-default);
     font-size: 16px;
     letter-spacing: 0.5px;
     line-height: 24px;
